@startuml

class PeterAssistant{
    Calendar: calendario
    Shower: shower
    dict get_event()
    dict get_destination()
    dict get_location()
    dict post_location()
}
PeterAssistant o-- Service : Agregation
abstract class Service{
    list : settings
    boolean : avaliable
    boolean is_available()
    void start_service()
    void end_service()
}
class Calendar{
    list: events
    String get_date()
    void  get_event()
    list display_events()
}
Service  <|-- Calendar
class Event{
    string start 
    string end 
    string summary 
    string location
    dict get_clase()
}
Calendar "1" *--  "Many" Event:Composition

class Block{
    string name
    string latitude
    string longitude
    string description
    list: pictures
    dict get_block()
}

Shower "1" *-- "many" Block : Composition
class Shower{
    list: blocks
    dict get_destination()
    dict get_location()
    dict post_location()

}
Service <|-- Shower : Extension
@enduml